# variant-experiment

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench.cpp
include/: Abstract.h  AbstractImpls.h  Utils.h  Variant.h  Variant.ipp  VariantImpls.h  VariantSlow.h  VariantSlowImpls.h
src/: VariantSlow.cpp
